feat: add masked debug output for SecretKey (#135)
* feat: add masked debug output for SecretKey

* chore(doc): update command to add gc info